# crew1

./: README.md  README_Python.md  app.py  code_review.md  pyproject.toml  requirements_document.md
src/crew1/: crew.py  main.py
src/crew1/config/: agents.yaml  tasks.yaml
src/crew1/tools/: custom_tool.py
